# Nanobind_Eigensolver

./: .gitignore  1dharmonic.cpp  1dharmonic.hpp  CMakeLists.txt  eigensolver.cpp  eigensolver.hpp  my_ext.cpp  potentials.cpp  test.py
